# audio-converter

./: .gitignore  GUI使用说明.md  README.md  gui.py  main.py  pyproject.toml  requirements.txt  run_gui.bat
docs/: NCM解密原理详解.md  bugfix-默认格式文件名截断.md  metadata-troubleshooting.md
src/: main.py  ui.py
src/crypto/: aes.py
src/formats/: __init__.py  base.py  frida_decrypt.py  frida_script.js  key_extractor.py  mflac.py  ncm.py  ncm_working.py
src/ui/: __init__.py  app.py  components.py  styles.py
src/utils/: converter.py  detector.py
tests/: test_aes.py
